--- a/Project.V10/Project.V10.csproj
+++ b/Project.V10/Project.V10.csproj
@@ -133,5 +133,11 @@
   <ItemGroup>
     <None Include="Resources\Rocket.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Project.V10.Lib\Project.V10.Lib.csproj">
+      <Project>{5484e138-6c13-4310-85be-aa804196eb1a}</Project>
+      <Name>Project.V10.Lib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
