--- a/Project.V10/Project.V10.csproj
+++ b/Project.V10/Project.V10.csproj
@@ -48,6 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CalculationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CalculationForm.Designer.cs">
+      <DependentUpon>CalculationForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormAbout.cs">
       <SubType>Form</SubType>
     </Compile>
