--- a/Project.V10.Test/Project.V10.Test.csproj
+++ b/Project.V10.Test/Project.V10.Test.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Project.V10.Lib\Project.V10.Lib.csproj">
+      <Project>{5484e138-6c13-4310-85be-aa804196eb1a}</Project>
+      <Name>Project.V10.Lib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
